<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="Typos">CoolMock</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="singup">Sign up!</string>
    <string name="sunbed">Sunbed</string>
    <string name="reportes">History and Reports</string>
    <string name="calcs">Payments</string>
    <string name="user">User</string>
    <string name="logout">Log out</string>
    <string name="reportsTitle">REPORTS</string>
    <string name="fab_add_report">Add a report</string>
    <string name="nuevo_libro">New Report</string>
    <string name="insert_name">Insert title</string>
    <string name="write_here">Write here</string>
    <string name="accept">Accept</string>
    <string name="full_comment_hint">Full comment hint</string>
    <string name="description">This is the description of the report, it will have a maximum of 2 lines…</string>
    <string name="delete_comment">Delete report</string>
    <string name="url_reportes">http://192.168.1.139:8080/api/reportes/</string>
    <string name="url_sombrillas">http://192.168.1.139:8080/api/sombrillas/</string>
    <string name="url_clientes">http://192.168.1.139:8080/api/clientes/</string>
    <string name="url_reservas">http://192.168.1.139:8080/api/reservas/</string>
    <string name="url_usuarios">http://192.168.1.139:8080/api/usuarios/</string>
    <string name="url_pagos">http://192.168.1.139:8080/api/pagos</string>
    <string name="eliminar_reporte">Delete report</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="error_connection">Connection error</string>
    <string name="error_undelivered">Undelivered error</string>
    <string name="error_unknown">Unknown error</string>
    <string name="campo_obligatorio">Compulsory field</string>
    <string name="usuarios">Users</string>
    <string name="fab_add_usuario">Add user</string>
    <string name="eliminar_Usuario">Delete user</string>
    <string name="esAdministrador">Worker role:</string>
    <string name="settings">Settings</string>
    <string name="ajuste_clientes">Customer settings</string>
    <string name="ajustes_usuarios">User settings</string>
    <string name="nuevo_usuario">New User</string>
    <string-array name="rol">
        <item>Admin</item>
        <item>Worker</item>
    </string-array>
    <string name="error_nombre_largo">The name cannot exceed 50 characters.</string>
    <string name="error_apellidos_largo">The surnames cannot exceed 50 characters.</string>
    <string name="error_password_corto">The password must be at least 8 characters long.</string>
    <string name="error_password_largo">The password cannot exceed 20 characters.</string>
    <string name="desc_imagen_usuario">User image</string>
    <string name="rol_card">Role:</string>
    <string name="user_name_hint">Full name</string>
    <string name="password_hint">Password</string>
    <string name="desc_imagen_telefono">Phone image</string>
    <string name="nuevo_cliente">New Customer</string>
    <string name="telefono_hint">Phone number</string>
    <string name="error_telefono_formato">Phone number format error</string>
    <string name="eliminar_cliente">Delete Customer</string>
    <string name="fab_add_cliente">Add customer</string>
    <string name="clientes">Customers</string>
    <string name="numero_sombrilla">Nº #%d</string>
    <string name="estado_sombrilla">Sunbed state</string>
    <string name="reserva">Reservations</string>
    <string name="create_new_reservation">Create a new reservation</string>
    <string name="pagada">Paid</string>
    <string name="sp_clientes">Select a customer</string>
    <string name="save">Save</string>
    <string name="eliminar_reserva">Delete reservation</string>
    <string name="toggle_details">Details</string>
    <string name="reservas">Reservations</string>
    <string name="fab_add_reserva">Make a reservation</string>
    <string name="fecha_reserva">Date: %s</string>
    <string name="estado_reserva">Status: %s</string>
    <string name="metodo_pago">Payment method: %s</string>
    <string name="reserva_pagada">Paid?: %s</string>
    <string name="fecha_pago">Payment date: %s</string>
    <string name="reservations">Reservations</string>
    <string name="no_reservas">No reservations for today</string>
    <string name="tvSombrillas">Reserved sunbeds:</string>
    <string name="payment_date">Payment date</string>
    <string name="filter_by_name">Filter by name</string>
    <string name="filter_by_date">Filter by date</string>
    <string name="select_date">Select date</string>
    <string name="filter_by_state">Filter by status</string>
    <string name="cancel">Cancel</string>
    <string name="show_all">Show all</string>
    <string name="sombrillas_reservadas">Reserved sunbeds: %1$s</string>
    <string name="pagar">Pay</string>
    <string name="mod_estado">Status</string>
    <string name="modificar">Edit</string>
    <string name="left_sombrilla">Left</string>
    <string name="right_sombrilla">Right</string>
    <string name="both_sombrillas">Both</string>
    <string name="select_sunbed">Select number of sunbeds</string>
    <string name="select_time">Select a time</string>
    <string name="select_hour">Select an hour</string>
    <string name="cliente">Customer</string>
    <string name="horaLlegada">Arrival time: %s</string>
    <string name="sombrillas">Parcel</string>
    <string name="historial">Record</string>
    <string name="not_registered">Not yet registered? Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="already_user">Already a user? Login</string>
    <string name="email">Email</string>
    <string name="btn_verReserva">View</string>
    <string name="btn_liberar">Release</string>
    <string name="btn_ocupar">Occupy</string>
    <string name="btn_reservar">Reserve</string>
    <string name="email_hint">Email</string>
    <string name="pagos">Payments</string>
    <string name="desc_icono_metodo_pago">Payment method icon</string>
    <string name="pagos_diarios">Daily Payments</string>
    <string name="no_pagos_hoy">No payments have been made on the current day</string>
    <string name="no_reports">There are no reports yet</string>
    <string name="accounts">Accounts</string>
    <string name="gestion_cuentas">Account Management</string>
    <string name="cerrar_sesion">Are you sure you want to log out?</string>
    <string name="cerrar_sesion_title">Logging Out</string>
    <string name="nueva">New</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="logouticon">logout icon</string>
    <string name="calendar_description">Calendar icon</string>
    <string name="historial_pagos">Payment history</string>
    <string name="titulo_ocupando_sombrilla">Occupying sunbed</string>
    <string name="descripcion_ocupando_sombrilla">The sunbed #%1$d has been occupied, Number of Hammocks: %2$s</string>
    <string name="titulo_liberando_sombrilla">Releasing sunbed</string>
    <string name="descripcion_liberando_sombrilla">The sunbed #%1$d has been released, Number of Hammocks: %2$s</string>
    <string name="titulo_reservando_sombrilla">Reserving sunbed</string>
    <string name="new_hint">New</string>
    <string name="filter">Filter</string>
    <string name="content_graph">graph img</string>
    <string name="content_savings">img savings</string>
    <string name="content_payment">img payment</string>
    <string name="content_calendar">img calendar</string>
    <string name="content_customer">img customer</string>
    <string name="content_user">img user</string>
    <string name="content_logout">img logout</string>
    <string name="content_cliente">img cliente</string>
    <string name="content_telefono">img telefono</string>
    <string name="content_email">img email</string>
    <string name="content_edit">img edit</string>
    <string name="content_eliminar">img eliminar</string>
    <string name="fecha_ejemplo">07/06/24</string>
    <string name="title">Title</string>
    <string name="cliente_desconocido">Unknown client\n</string>
    <string name="content_fondo">img fondo</string>
    <string name="nombre_completo">Full name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sunbed_price">Sunbed price </string>
    <string name="estado_actual">Actual state</string>
    <string name="selected_sunbeds">Number of selected sunbeds</string>
    <string name="only_admin_can_add_user">Only Admin can create new users</string>
    <string name="creacion_cliente">Cliente creado</string>
    <string name="titulo_pagando_reserva">Pago de Reserva</string>
    <string name="titulo_cancelacion_reserva">Cancelación de reserva</string>
    <string name="titulo_llegada_reserva">Reserva ha llegado</string>
    <string name="content_icono">img icono</string>
    <string name="motivo_cancelacion">Reason for cancellation\n</string>
    <string name="ha_llegado">Has arrived\n</string>
    <string name="cancelar_reserva">Cancel booking</string>
    <string name="reservada">Reserved</string>
    <string name="ocupada">Occupy</string>
    <string name="libre">Free</string>
    <string name="pendientes">Pendientes</string>
    <string name="pagadas">Pagadas</string>
    <string name="reservas_pagadas">Pagadas</string>
    <string name="reservas_pendientes">Pendientes</string>
    <string name="total_pagos">Total</string>
    <string name="filter_by_range">Filter by day range</string>
    <string name="filter_by_method">Filter by payment method</string>
    <string name="_0">0</string>
    <string name="content_euro">img euro</string>
    <string name="datos_cliente">These are your data!\n</string>
    <string name="volver">Back</string>
    <string name="cuenta_cliente">Your Account</string>
    <string name="cliente_modificado">Customer modified successfully</string>
    <string name="welcome">WELCOME!</string>
    <string name="usuario">User</string>
    <string name="tus_reservas">Your reservations!</string>
    <string-array name="hour_array">
        <item>08:00 AM</item>
        <item>09:00 AM</item>
        <item>10:00 AM</item>
        <item>11:00 AM</item>
        <item>12:00 PM</item>
        <item>01:00 PM</item>
        <item>02:00 PM</item>
        <item>03:00 PM</item>
        <item>04:00 PM</item>
        <item>05:00 PM</item>
        <item>06:00 PM</item>
        <item>07:00 PM</item>
    </string-array>
    <string-array name="state">
        <item>Error</item>
        <item>Canceled</item>
        <item>Warning</item>
        <item>Information</item>
    </string-array>
    <string-array name="planos_array">
        <item>Plan 1</item>
        <item>Plan 2</item>
        <item>Plan 3</item>
    </string-array>
    <string-array name="payment_array">
        <item>Cash</item>
        <item>Credit Card</item>
    </string-array>
    <string-array name="estado_reserva_array">
        <item>Pending</item>
        <item>Has Arrived</item>
        <item>Canceled</item>
    </string-array>
    <string-array name="filtro_options">
        <item>Sort by name</item>
        <item>Sort by date</item>
        <item>Sort by type</item>
    </string-array>
</resources>