<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/usuario_card"
    android:layout_marginStart="2dp"
    android:layout_marginEnd="2dp"
    android:layout_marginVertical="2dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imagenCliente"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/content_cliente"
            android:src="@drawable/usuario"
            android:scaleType="centerCrop"/>

        <ImageView
            android:id="@+id/imagenTelefono"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="5dp"
            android:layout_below="@id/imagenCliente"
            android:contentDescription="@string/content_telefono"
            android:src="@drawable/baseline_local_phone_24"
            android:scaleType="centerCrop"/>

        <ImageView
            android:id="@+id/imagenEmail"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="5dp"
            android:layout_below="@id/imagenTelefono"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/content_email"
            android:src="@drawable/email"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/nombreCompleto"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/imagenCliente"
            android:layout_alignTop="@id/imagenCliente"
            android:layout_marginStart="16dp"
            android:text="@string/nombre_completo"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/numeroTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_toEndOf="@id/imagenTelefono"
            android:layout_alignTop="@id/imagenTelefono"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:text="@string/telefono_hint"/>

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_toEndOf="@id/imagenEmail"
            android:layout_alignTop="@id/imagenEmail"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:text="@string/email_hint"/>



        <ImageButton
            android:id="@+id/eliminarCliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/cancel32"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/content_eliminar"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"/>

        <ImageButton
            android:id="@+id/modificarCliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/editar24"
            android:contentDescription="@string/content_edit"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:layout_toStartOf="@id/eliminarCliente"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"/>

    </RelativeLayout>
</androidx.cardview.widget.CardView>
