<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/usuario_card"
    android:layout_marginStart="2dp"
    android:layout_marginEnd="2dp"
    android:layout_marginVertical="2dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imagenPerfilUsuario"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_margin="10dp"
            android:src="@drawable/usuario"
            android:contentDescription="@string/desc_imagen_usuario"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/nombreCompleto"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/imagenPerfilUsuario"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/nombre_completo"
            android:textSize="22sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/rol"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/rol_card"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_below="@id/nombreCompleto"
            android:layout_toEndOf="@id/imagenPerfilUsuario"
            android:layout_marginEnd="20dp"
            android:maxLines="1"
            android:layout_marginBottom="15dp"/>

        <ImageButton
            android:id="@+id/eliminarUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/borrar32"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/content_eliminar"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="10dp"/>

        <ImageButton
            android:id="@+id/modificarUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/editar24"
            android:contentDescription="@string/content_edit"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:layout_toStartOf="@id/eliminarUsuario"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="12dp"/>

    </RelativeLayout>
</androidx.cardview.widget.CardView>
