<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialogbg">

    <ImageView
        android:id="@+id/cancelButton"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:src="@drawable/abajo24"
        android:layout_gravity="center|top"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/createText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="viewStart"
        android:text="@string/settings"
        android:padding="8dp"
        android:textColor="@color/black"
        android:layout_marginStart="12dp"
        android:layout_marginTop="5dp"
        android:textSize="25sp"
        android:drawableEnd="@drawable/cancel32" />

    <TextView
        android:id="@+id/layoutCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ajuste_clientes"
        android:textColor="@color/black"
        android:layout_marginLeft="10dp"
        android:textSize="18sp"
        android:drawablePadding="20dp"
        android:drawableStart="@drawable/usuario"
        android:layout_marginTop="30dp" />

    <TextView
        android:id="@+id/layoutUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ajustes_usuarios"
        android:textColor="@color/black"
        android:layout_marginLeft="10dp"
        android:textSize="18sp"
        android:drawablePadding="20dp"
        android:drawableStart="@drawable/usuario"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/layoutLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textColor="@color/black"
        android:layout_marginLeft="15dp"
        android:drawableStart="@drawable/baseline_logout_24"
        android:drawablePadding="30dp"
        android:layout_marginTop="100dp"
        android:textSize="20sp"
        android:layout_marginBottom="100dp"/>

</LinearLayout>
