<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/background_with_border"
    android:backgroundTint="@color/dark_background"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/action_filter_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:drawableStart="@drawable/nombrefiltro"
        android:drawablePadding="12dp"
        android:padding="12dp"
        android:text="@string/filter_by_name"
        android:textSize="16sp" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:dividerInsetEnd="16dp"
        app:dividerInsetStart="16dp" />

    <TextView
        android:id="@+id/action_filter_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:drawableStart="@drawable/etiqueta"
        android:drawablePadding="12dp"
        android:padding="12dp"
        android:text="@string/filter_by_state"
        android:textSize="16sp" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:dividerInsetEnd="16dp"
        app:dividerInsetStart="16dp" />

    <TextView
        android:id="@+id/action_select_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:drawableStart="@drawable/fecha24"
        android:drawablePadding="12dp"
        android:padding="12dp"
        android:text="@string/select_date"
        android:textSize="16sp" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:dividerInsetEnd="16dp"
        app:dividerInsetStart="16dp" />

    <TextView
        android:id="@+id/action_show_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:drawableStart="@drawable/todas"
        android:drawablePadding="12dp"
        android:padding="12dp"
        android:text="@string/show_all"
        android:textSize="16sp" />
</LinearLayout>
